[package]
name = "qllm"
authors = [
  "Harrison Hemstreet <https://github.com/HarrisonHemstreet> <HarrisonHemstreet@proton.me>",
]
version = "0.2.0"
edition = "2021"
description = "Query any LLM found on Ollama from the terminal!"
documentation = "https://github.com/HarrisonHemstreet/qllm/blob/main/README.md"
readme = "README.md"
homepage = "https://github.com/HarrisonHemstreet/qllm"
repository = "https://github.com/HarrisonHemstreet/qllm"
keywords = ["LLM", "Ollama", "AI", "Chat bot", "CLI"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
